# gnu_rizoma

./: .gitignore  .svnignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  configure.in  prepareChangelog.py  rizoma.doxygen
data/: Makefile.am  rizoma-admin.desktop.in  rizoma-compras.desktop.in  rizoma-informes.desktop.in  rizoma-inventario.desktop.in  rizoma-ventas.desktop.in
data/icons/: Makefile.am
db/: ChangeLog  Makefile.am  NOTICE.dia  csvproductostosql.sh  funciones.sql  funciones_sugeridas.sql  install_db.sh  migracion.sh  modelo.dia  rizoma.initvalues  rizoma.structure  rizoma.update.1  rizoma.update.2  rizoma.update.3  update_db.sh  volcar_funciones.sh
debian/: README.Debian  changelog  control  copyright  menu  menu.ex  postinst  rules
m4/: Makefile.am  gksu.m4  gnome-print.m4  gnomeui.m4  gtk-2.0.m4  gtk-2.0.m4.LICENSE  postgresql.m4  pslib.m4
pixmaps/: Makefile.am  tux.xpm
src/: ChangeLog  Makefile.am  admin.c  admin.h  administracion_productos.c  administracion_productos.h  boleta.c  boleta.h  caja.c  caja.h  comisiones.c  comisiones.h  compras.c  compras.h  config_file.c  config_file.h  control.c  control.h  credito.c  credito.h  datos.h  datos_negocio.c  datos_negocio.h  dimentions.h  encriptar.c  encriptar.h  errors.c  errors.h  factura_more.c  factura_more.h  fake_buy.c  impuestos.c  impuestos.h  main.c  main.h  manejo_pagos.c  manejo_pagos.h  manejo_productos.c  manejo_productos.h  parametros.c  (+25 more)
ui/: Makefile  Makefile.am  Makefile.in  NOTICE.ui  NOTICE.ui-glade  edit-menu.xml  print-menu.xml  rizoma-admin.ui  rizoma-common.ui  rizoma-compras.glade  rizoma-compras.ui  rizoma-config.glade  rizoma-config.ui  rizoma-informes.ui  rizoma-inventario.ui  rizoma-login.glade  rizoma-login.ui  rizoma-ventas.glade  rizoma-ventas.ui  rizoma.glade  rizoma.ui
