AC_INIT(rizoma, 0.0.2, jonathan@rizoma.cl)
AM_INIT_AUTOMAKE(dist-bzip2)
AM_CONFIG_HEADER(config.h)

AC_ARG_ENABLE(debug, 
	     [	     --enable-debug	enable debugging information (default=no)],
	     debug=$enableval, debug=no)

if test x"$enableval" = xyes; then
   CFLAGS="-ggdb -O0 -Wall"
else
   CFLAGS=""
fi

AM_CHECK_PGSQL

AC_PROG_CC

AM_PATH_GTK_2_0

AM_CHECK_GNOME_PRINT

AM_CHECK_GNOME_UI

AM_CHECK_PSLIB

AC_HEADER_STDC

AC_GCC_TRADITIONAL
AC_FUNC_MALLOC

AC_OUTPUT([Makefile
	   src/Makefile
	   m4/Makefile
	   db/Makefile
	   pixmaps/Makefile	   
	   ])
